[package]
name = "crc-correction"
version = "1.0.0"
edition = "2024"
authors = ["Cameron Duff <cameron@m4c.ro>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "CRC Correction"
homepage = "https://github.com/m4c-ro/crc-correction"
repository = "https://github.com/m4c-ro/crc-correction"
documentation = "https://docs.rs/crc-correction"
keywords = ["crc", "error", "correction"]
categories = ["algorithms", "no-std", "no-std::no-alloc"]
exclude = [
    "tests/**",
    ".gitignore",
    "CHANGELOG.md",
]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
crc = "3.3.0"
sort-const = "1.0.1"

[dev-dependencies]
proptest = "1.7.0"
